# mind-spiral

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  JOEY_WRITING_STYLE.md  MCP_PLAN.md  MIND_SPIRAL.md  PRD-v2-performance.md  PRD.md  README.md  REFERENCES.md  docker-compose.yml  migrate_atoms.py  pyproject.toml  run_daily_after_extract.sh  run_full_extract.py
config/: default.yaml
docs/: MCP_INSTALL.md  architecture.html
engine/: __init__.py  __main__.py  api.py  auth.py  cli.py  config.py  contradiction_alert.py  conviction_deduper.py  conviction_detector.py  daily_batch.py  decision_tracker.py  explorer.py  frame_clusterer.py  identity_scanner.py  llm.py  mcp_server.py  models.py  query_engine.py  schemas_api.py  signal_store.py  trace_extractor.py
schemas/: context_frame.json  conviction.json  identity_core.json  reasoning_trace.json  signal.json
skill/: SKILL.md
skill/references/: context-assembly.md  joey-profile.md
